<resources>
    <string name="app_name">Life of Pet</string>
    <string name="Desc">Description</string>
    <string name="best_seller_title">Best Seller</string>
    <string name="featured_title">Featured</string>
    <string name="special_title">Special Products</string>
    <string name="Product_name">Product Name</string>
    <string name="Product_price">Product Price</string>
    <string name="manufactorer_title">Top Brands</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="Similar_items">Similar Item</string>
    <string name="guest_user">Life of Pet</string>


    <string-array name="film_genre">
        <item>Action</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Musical</item>
        <item>Thriller</item>
    </string-array>

    <string-array name="actionFilms">
        <item>Dr. No (1962)</item>
        <item>Goldfinger (1964)</item>
        <item>Thunderball (1965)</item>
        <item>Live and Let Die (1973)</item>
        <item>Moonraker (1979)</item>
        <item>For Your Eyes Only (1981)</item>
        <item>Octopussy (1983)</item>
        <item>A View to a Kill (1985)</item>
        <item>Licence to Kill (1989)</item>
        <item>GoldenEye (1995)</item>
    </string-array>

    <string-array name="musicals">
        <item>Naughty Marietta (1935)</item>
        <item>Rose Marie (1936)</item>
        <item>Maytime (1937)</item>
        <item>Sweethearts (1938)</item>
        <item>Bitter Sweet (1940)</item>
        <item>New Moon (1940)</item>
        <item>I Married an Angel (1942)</item>
        <item>Lady Be Good (1941)</item>
        <item>Ship Ahoy (1942)</item>
        <item>Sensations of 1945 (1944)</item>
    </string-array>

    <string-array name="dramas">
        <item>Home of the Brave (1949)</item>
        <item>The Accused (1949)</item>
        <item>12 Angry Men (1957)</item>
        <item>Compulsion (1959)</item>
        <item>Inherit the Wind (1960)</item>
        <item>To Kill a Mockingbird (1962)</item>
        <item>Mrs. Miniver (1942)</item>
        <item>Since You Went Away (1944)</item>
        <item>The Champ (1931)</item>
        <item>Nashville (1975)</item>
    </string-array>

    <string-array name="thrillers">
        <item>Alien (1979)</item>
        <item>The French Connection (1971)</item>
        <item>High Noon (1952)</item>
        <item>Double Indemnity (1944)</item>
        <item>Safety Last (1923)</item>
        <item>The Lady From Shanghai (1948)</item>
        <item>The Third Man (1949)</item>
        <item>Rear Window (1954)</item>
        <item>The 39 Steps (1935)</item>
        <item>Shadow of a Doubt (1943)</item>
    </string-array>

    <string-array name="comedies">
        <item>Safety Last (1923)</item>
        <item>Duck Soup (1933)</item>
        <item>Cat Ballou (1965)</item>
        <item>What\'s Up, Tiger Lily? (1966)</item>
        <item>Blazing Saddles (1974)</item>
        <item>Play It Again, Sam (1972)</item>
        <item>The Cheap Detective (1978)</item>
        <item>The Naked Gun (1988)</item>
        <item>The Freshman (1990)</item>
        <item>Waiting for Guffman (1996) </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">movie title</string>
    <string name="action_movies">Action</string>
    <string name="musical_movies">Musical</string>
    <string name="drama_movies">Drama</string>
    <string name="comedy_movies">Comedy</string>
    <string name="thriller_movies">Thriller</string>
    <string name="movie_genre">genre</string>
    <string name="film_genres">film genew</string>
    <string name="category_title">Category</string>
    <string name="search_hint">search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_hint">mail ID</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="strRegister">Sign Up</string>
    <string name="your_personal_data">Personal Data</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="telephone_hint">Telephone</string>
    <string name="fax">fax</string>
    <string name="your_Address">Your Address</string>
    <string name="company">landmark</string>
    <string name="address1_hint">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="postal_code_hint">Postal Code</string>
    <string name="country">Country</string>
    <string name="state" />
    <string name="your_Password">Password</string>
    <string name="conform_password_hint">Confirm Password</string>
    <string name="newsletter">news letter</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign up</string>
    <string name="subscribe">subscribe</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="city_hint">City</string>
    <string name="vetoncall_packages">Vet on Call Packages</string>
    <string name="wellness_deworming">Wellness + Deworming Combo</string>
    <string name="spiner_title">Select Service</string>
</resources>
