<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="10dp"
    android:clickable="true"
    android:orientation="horizontal">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:background="@drawable/custom_border"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/Product_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/Desc"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_img_error" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:src="@drawable/banner_hot" />
            </FrameLayout>

            <TextView

                android:id="@+id/Product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/Product_name"
                android:textSize="13sp"
                android:textStyle="bold"

                />

            <TextView

                android:id="@+id/Product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Product_price"
                android:textColor="@color/colorAccent"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666" />

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666"
                android:visibility="gone" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>