<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="10dp"
    android:clickable="true">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center"
        android:background="@drawable/custom_border"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/Product_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/Desc"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_img_error" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:src="@drawable/banner_special" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView

                    android:id="@+id/Product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@string/Product_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/Product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/Product_price"
                    android:textSize="13sp"
                    android:textStyle="bold"

                    />


                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:text="Quatity : "
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#666" />

                <Button
                    android:id="@+id/btn_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"

                    android:background="@color/bootstrap_brand_danger"

                    android:text="Remove"
                    android:textColor="@color/AntiqueWhite" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>